New feature: Change background color for each slide

--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -63,6 +63,10 @@
 
 <a href="#" id="btn-navigation-mode" class="button secondary" data-tooltip title="{% trans 'tt_btn_navigation_mode' %}"> <i class="fi-thumbnails"></i> </a>
 
+<a href="#" id="btn-slide-background-color" class="button secondary" data-tooltip title="{% trans 'tt_btn_slide_background_color' %}"> <i class="fi-paint-bucket"></i> 
+	<input id="slide-background-color" class="color {hash:true}" style="display:none;width:60px;border:none;"/>
+</a>
+
 <a href="#" id="btn-exit-preview-mode" class="button secondary" data-tooltip title="{% trans 'tt_btn_back_edit_mode' %}" style="display: none;"> <i class="fi-arrow-left"></i> {% trans 'btn_back_edit_mode' %} </a>
 
 <div id="right-panel">
