--- a/django_app/project/static/css/edit.styl
+++ b/django_app/project/static/css/edit.styl
@@ -123,6 +123,14 @@ optionsPanel()
 	font-size 4em
 	iconBtn()
 
+#btn-slide-background-color
+	position absolute
+	font-size 3em
+	z-index 1
+	bottom 12%
+	left 11%
+	padding 0 8px
+
 #btn-exit-preview-mode
 	position absolute
 	right 2%
