--- a/django_app/project/static/css/themes/theme_2.css
+++ b/django_app/project/static/css/themes/theme_2.css
@@ -1,10 +1,10 @@
-.title{	
+.title{
 	font-size: 3em;
 	line-height: 1.1em;
 	color: white;
 }
 
-.subtitle{	
+.subtitle{
 	font-size: 2em;
 	line-height: 1.1em;
 	color: white;
@@ -13,7 +13,7 @@
 .body{
 	font-size: 1em;
 	line-height: 1.1em;
-	color: white;	
+	color: white;
 }
 
 .link {
@@ -37,10 +37,12 @@
 }
 
 body {
-    /*font-family: 'PT Sans', sans-serif;*/
-    min-height: 740px;
-
-    background: #3D6F3D;
+	min-height: 740px;
+    background-color: #3D6F3D;
+	transition: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-webkit-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
 }
 
 
@@ -68,7 +70,7 @@ i, em { font-style: italic }
     display: none;
 }
 
-.step {	
+.step {
     position: relative;
     width: 900px;
     height: 700px;
