--- a/django_app/project/static/css/themes/theme_3.css
+++ b/django_app/project/static/css/themes/theme_3.css
@@ -1,11 +1,11 @@
-.title{	
+.title{
 	font-size: 3em;
 	line-height: 1.1em;
 	color: #a3cfe6;
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
 }
 
-.subtitle{	
+.subtitle{
 	font-size: 2em;
 	line-height: 1.1em;
 	color: #4f75ba;
@@ -15,7 +15,7 @@
 .body{
 	font-size: 1em;
 	line-height: 1.1em;
-	color: white;	
+	color: white;
 }
 
 .link {
@@ -39,10 +39,12 @@
 }
 
 body {
-    /*font-family: 'PT Sans', sans-serif;*/
-    min-height: 740px;
-
-    background: #6c7cba;
+	min-height: 740px;
+    background-color: #6c7cba;
+	transition: all 0.5s ease-in;
+	-moz-transition: all 0.5s ease-in;
+	-webkit-transition: all 0.5s ease-in;
+	-o-transition: all 0.5s ease-in;
 }
 
 
@@ -70,7 +72,7 @@ i, em { font-style: italic }
     display: none;
 }
 
-.step {	
+.step {
     position: relative;
     width: 900px;
     height: 700px;
