--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -63,7 +63,7 @@
 
 <a href="#" id="btn-navigation-mode" class="button secondary" data-tooltip title="{% trans 'tt_btn_navigation_mode' %}"> <i class="fi-thumbnails"></i> </a>
 
-<a href="#" id="btn-slide-background-color" class="button secondary" data-tooltip title="{% trans 'tt_btn_slide_background_color' %}"> <i class="fi-paint-bucket"></i> 
+<a href="#" id="btn-slide-background-color" class="button secondary" data-tooltip title="{% trans 'tt_btn_slide_background_color' %}"> <i class="fi-paint-bucket"></i>
 	<input id="slide-background-color" class="color {hash:true}" style="display:none;width:60px;border:none;"/>
 </a>
 
@@ -170,9 +170,9 @@
 			<a id="underlined-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
 			<a id="italic-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
 			<a id="link-btn" class="button secondary" data-tooltip title="{% trans 'tt_transform_to_link' %}"> <i class="fi-link"></i> </a>
-			<a id="color-btn" class="button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i> 
+			<a id="color-btn" class="button secondary" data-tooltip title="{% trans 'tt_change_color' %}"> <i class="fi-paint-bucket"></i>
                 <input id="text-color" class="color {hash:true}" style="display:none;width:60px;border:none;"/>
-            </a>            
+            </a>
 		</div>
 
 	</div>
@@ -290,6 +290,8 @@
 
 	</div>
 </div>
+
+<input type="hidden" id="import-message" value="{% trans 'import_message' %}" />
 
 <!-- Templates -->
 
