Fixed some bugs

--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -4,25 +4,22 @@
 
 {% load i18n %}
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<title>{{presentation.name}}</title>
+<title>{{presentation.name|default:'Dyapos - Editor'}}</title>
 
 <link href="{{STATIC_URL}}css/edit.css" rel="stylesheet" />
 <link id="theme-stylesheet" href="{{STATIC_URL}}css/themes/theme_{{ presentation.theme_id|default:'1' }}.css" rel="stylesheet" />
 
-<script src="{{STATIC_URL}}js/jquery-ui-1.10.3.custom.js"></script>
-<script src="{{STATIC_URL}}js/jquery.ui.touch-punch.js"></script>
+<script src="{{STATIC_URL}}js/editor/impress_custom.js"></script>
 <script src="{{STATIC_URL}}js/underscore.js"></script>
 <script src="{{STATIC_URL}}js/backbone.js"></script>
-<script src="{{STATIC_URL}}js/html2canvas.js"></script>
-<script src="{{STATIC_URL}}js/colorpicker.min.js"></script>
+<script src="{{STATIC_URL}}js/backbone-relational.js"></script>
+<script src="{{STATIC_URL}}js/jquery-ui-1.10.3.custom.js"></script>
 <script src="{{STATIC_URL}}js/jscolor/jscolor.js"></script>
 {% if is_anonymous == False %}
 <script src="{{NODEJS_URL}}/socket.io/socket.io.js"></script>
 <script src="{{STATIC_URL}}js/backbone.iosync.js"></script>
 <script src="{{STATIC_URL}}js/backbone.iobind.js"></script>
 {% endif %}
-<script src="{{STATIC_URL}}js/backbone-relational.js"></script>
-<script src="{{STATIC_URL}}js/editor/impress_custom.js"></script>
 
 <script>
 	// Define a namespace app variable where to save global variables
