Fixed bugs: - component position, from relatie to absolute - load the slides in ascending order

--- a/django_app/main/templates/index.html
+++ b/django_app/main/templates/index.html
@@ -82,7 +82,7 @@
 	</div>
 </div>
 
-<div id="presentations">
+<!-- <div id="presentations">
 
 	<form id="form-search" action="{% url 'main.views.presentations.search_global' %}" method="post">
 		<div class="row collapse">
@@ -106,10 +106,10 @@
 		</div>
 		<img src="{{STATIC_URL}}img/loading.gif" id="icon-loading-presentations" width="20%" style="display:none;">
 		<ul id="search-results" class="small-block-grid-2 large-block-grid-3">
-			<!-- search results loaded by AJAX -->
+
 		</ul>
 	</div>
-</div>
+</div> -->
 
 <footer>
 	<div class="row">
