--- a/django_app/main/templates/view.html
+++ b/django_app/main/templates/view.html
@@ -7,7 +7,7 @@
     <title>{{presentation.name}}</title>
     <meta name="viewport" content="width=1024" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link href="{{STATIC_URL}}css/themes/theme_{{ presentation.theme_id }}.css" rel="stylesheet" />
+    <link href="{{MEDIA_URL}}themes/theme_{{ presentation.theme_id }}.css" rel="stylesheet" />
 </head>
 
 <body class="impress-not-supported">
