--- a/django_app/project/static/css/edit.styl
+++ b/django_app/project/static/css/edit.styl
@@ -131,6 +131,14 @@ optionsPanel()
 	left 11%
 	padding 0 8px
 
+#btn-slide-notes
+	position absolute
+	font-size 3em
+	z-index 1
+	bottom 12%
+	left 16%
+	padding 0 8px
+
 #btn-exit-preview-mode
 	position absolute
 	right 2%
