--- a/django_app/project/static/css/themes/theme_2.css
+++ b/django_app/project/static/css/themes/theme_2.css
@@ -36,6 +36,38 @@
     /*text-shadow: -1px -1px 2px rgba(100,100,100,0.5);*/
 }
 
+/* This styles are used on the impress.js-console library */
+.step .notes{
+	display: none;
+}
+
+#help-box{
+	background: none repeat scroll 0px 0px rgba(0, 0, 0, 0.5);
+	color: #EEE;
+	font-size: 50%;
+	left: 2em;
+	bottom: 2em;
+	width: 26em;
+	border-radius: 1em;
+	padding: 1em;
+	position: fixed;
+	right: 0px;
+	text-align: center;
+	z-index: 100;
+	display: block;
+	font-family: Verdana,Arial,Sans;
+}
+
+#help-box.hide{
+	display: none;
+}
+
+#help-box.disabled{
+	display: none;
+}
+
+/* End of impress.js-console styles */
+
 body {
 	min-height: 740px;
     background-color: #3D6F3D;
