New feature: now you can download your presentations and view Offline

--- a/django_app/main/templates/view.html
+++ b/django_app/main/templates/view.html
@@ -84,7 +84,13 @@
     			{% endif %}
 
                 {% if component.type == "image" %}
-                <img src="/media/images/{{component.file}}" style="width:100%">
+                <img src="
+                {% if component.file %}
+                	/media/images/{{component.file}}
+                {% else %}
+                	{{component.external_url}}
+                {% endif %}
+                " style="width:100%">
                 {% endif %}
 
                 {% if component.type == "video" %}
