--- a/django_app/main/templates/view.html
+++ b/django_app/main/templates/view.html
@@ -23,11 +23,7 @@
 {% autoescape off %}
 
 	{% for slide in slides %}
-    	<div class="step"
-    	id="step-{{forloop.counter0}}"
-    	data-x="{{slide.pos_x}}"
-    	data-y="{{slide.pos_y}}"
-    	data-scale="{{slide.scale}}"
+    	<div class="step" id="step-{{forloop.counter0}}" data-x="{{slide.pos_x}}" data-y="{{slide.pos_y}}" data-scale="{{slide.scale}}"
     	{% if slide.rotation_x %}
     		data-rotate-x="{{slide.rotation_x}}"
     	{% endif %}
@@ -70,7 +66,7 @@
         			{% endif %}
     			{% endif %}
     			{% if component.type == "image" %}
-    			    width: {{component.size}}%;
+    			    width: {{component.size}}px;
     			{% endif %}
     			{% if component.type == "video" %}
     			    width: {{component.size}}%;
