--- a/django_app/project/static/css/themes/theme_1.css
+++ b/django_app/project/static/css/themes/theme_1.css
@@ -1,15 +1,15 @@
 .title {
-	font-size: 3em;
+	font-size: 128px;
 	line-height: 1.1em;
 	color: black;
 }
 .subtitle {
-	font-size: 2em;
+	font-size: 92px;
 	line-height: 1.1em;
 	color: black;
 }
 .body {
-	font-size: 1em;
+	font-size: 80;
 	line-height: 1.1em;
 	color: black;
 }
