--- a/django_app/project/static/css/themes/theme_2.css
+++ b/django_app/project/static/css/themes/theme_2.css
@@ -1,17 +1,17 @@
 .title{
-	font-size: 3em;
+	font-size: 128px;
 	line-height: 1.1em;
 	color: white;
 }
 
 .subtitle{
-	font-size: 2em;
+	font-size: 92px;
 	line-height: 1.1em;
 	color: white;
 }
 
 .body{
-	font-size: 1em;
+	font-size: 80px;
 	line-height: 1.1em;
 	color: white;
 }
