--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -6,6 +6,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <title>{{presentation.name|default:'Dyapos - Editor'}}</title>
 
+<link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
 <link href="{{STATIC_URL}}css/edit.css" rel="stylesheet" />
 <link id="theme-stylesheet" href="{{STATIC_URL}}css/themes/theme_{{ presentation.theme_id|default:'1' }}.css" rel="stylesheet" />
 
@@ -147,7 +148,7 @@
 </div>
 
 <div id="new-component-box" style="display:none;">
-	<a id="btn-add-text" class="button secondary" href="#" data-dropdown="text-dropdown" data-tooltip title="{% trans 'tt_btn_add_text' %}">{% trans "text" %}</a>
+	<a id="btn-add-text" class="button secondary" href="#" data-dropdown="text-dropdown" data-options="is_hover:true" data-tooltip title="{% trans 'tt_btn_add_text' %}">{% trans "text" %}</a>
 	<ul id="text-dropdown" data-dropdown-content class="f-dropdown">
 		<li>
 			<a id="btn-add-title" class="button secondary" href="#" data-tooltip title="{% trans 'tt_btn_add_title' %}">{% trans "btn_title" %}</a>
@@ -167,8 +168,21 @@
 <div id="toolbox-container">
 	<div id="toolbox-text" class="toolbox" style="display:none;">
 		<div class="row">
-			<a id="btn-increase-font" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
-			<a id="btn-decrease-font" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
+			<!-- <a id="btn-increase-font" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
+			<a id="btn-decrease-font" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a> -->
+			<a href="#" class="button secondary" data-dropdown="dropdown-font-size" data-options="is_hover:true">{% trans 'size' %}</a>
+			<ul id="dropdown-font-size" class="f-dropdown" data-dropdown-content>
+			  <li><a href="#" data-value="24">24px</a></li>
+			  <li><a href="#" data-value="32">32px</a></li>
+			  <li><a href="#" data-value="42">42px</a></li>
+			  <li><a href="#" data-value="54">54px</a></li>
+			  <li><a href="#" data-value="72">72px</a></li>
+			  <li><a href="#" data-value="80">80px</a></li>
+			  <li><a href="#" data-value="92">92px</a></li>
+			  <li><a href="#" data-value="112">112px</a></li>
+			  <li><a href="#" data-value="128">128px</a></li>
+			  <li><a href="#"  data-value="152">152px</a></li>
+			</ul>
 			<a id="bold-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_bold' %}"> <i class="fi-bold"></i> </a>
 			<a id="underlined-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_underline' %}"> <i class="fi-underline"></i> </a>
 			<a id="italic-btn" class="button secondary" data-tooltip title="{% trans 'tt_toggle_italic' %}"> <i class="fi-italic"></i> </a>
