--- a/django_app/project/static/css/edit.css
+++ b/django_app/project/static/css/edit.css
@@ -404,3 +404,9 @@ a:hover {
 #themes-window #themes-list .theme-item:hover {
   border: 2px solid #005212;
 }
+.ui-resizable-se {
+  width: 50px;
+  height: 50px;
+  right: -50px;
+  bottom: -50px;
+}
