--- a/django_app/project/static/css/edit.styl
+++ b/django_app/project/static/css/edit.styl
@@ -333,3 +333,9 @@ optionsPanel()
 
 			&:hover
 				border 2px solid $primary_color
+
+.ui-resizable-se
+	width 50px
+	height 50px
+	right -50px
+	bottom -50px
