--- a/django_app/project/static/css/themes/theme_4.css
+++ b/django_app/project/static/css/themes/theme_4.css
@@ -1,5 +1,5 @@
 .title{
-	font-size: 3em;
+	font-size: 128px;
 	line-height: 1.1em;
 	color: #B04A24;
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
@@ -7,7 +7,7 @@
 }
 
 .subtitle{
-	font-size: 2em;
+	font-size: 92px;
 	line-height: 1.1em;
 	color: #DD7F5C;
 	text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
@@ -15,7 +15,7 @@
 }
 
 .body{
-	font-size: 1em;
+	font-size: 80px;
 	line-height: 1.1em;
 	color: B04A24;
 	font-family: cursive;
