--- a/django_app/main/templates/view.html
+++ b/django_app/main/templates/view.html
@@ -62,7 +62,7 @@
         				color: {{component.color}};
         			{% endif %}
         			{% if component.font_size %}
-        				font-size: {{component.font_size}}em;
+        				font-size: {{component.font_size}}px;
         			{% endif %}
     			{% endif %}
     			{% if component.type == "image" %}
