Added an image resizer

--- a/django_app/main/templates/edit.html
+++ b/django_app/main/templates/edit.html
@@ -193,10 +193,10 @@
 
 	</div>
 	<div id="toolbox-image" class="toolbox" style="display:none;">
-		<div class="row">
+		<!-- <div class="row">
 			<a id="btn-increase-image-size" class="button secondary" data-tooltip title="{% trans 'tt_increase_size' %}"> + </a>
 			<a id="btn-decrease-image-size" class="button secondary" data-tooltip title="{% trans 'tt_decrease_size' %}"> - </a>
-		</div>
+		</div> -->
 	</div>
 </div>
 
@@ -343,6 +343,7 @@
 	{{STATIC_URL}}img/loading.gif
 	[[/url]]
 	" style="width: 100%; height: 100%;">
+	<div class="btn-image-resizer"><i class="fi-arrow-down"></i></div>
 </script>
 
 <script id="template-video-component" type="text/mustache">
