--- a/django_app/project/static/css/edit.css
+++ b/django_app/project/static/css/edit.css
@@ -404,9 +404,16 @@ a:hover {
 #themes-window #themes-list .theme-item:hover {
   border: 2px solid #005212;
 }
-.ui-resizable-se {
-  width: 50px;
-  height: 50px;
-  right: -50px;
-  bottom: -50px;
+.image .btn-image-resizer {
+  display: none;
+  position: absolute;
+  right: -45px;
+  bottom: -80px;
+  color: #005212;
+  font-size: 1.5em;
+  -moz-transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
 }
